@@ -4,18 +4,16 @@ package Bob;
 
 use strict;
 use warnings;
+use inc::CPANTesting;
 
 sub whimper { print {*STDOUT} $_[ 0 ]."\n"; exit 0 }
 
 BEGIN {
-   eval { require 5.008; };          $@ and whimper 'Perl minimum 5.8';
-   qx(uname -a) =~ m{ bandsman      }mx and whimper 'Stopped Horne';
-   qx(uname -a) =~ m{ higgsboson    }mx and whimper 'Stopped dcollins';
-   qx(uname -a) =~ m{ profvince.com }mx and whimper 'Stopped vpit';
-   $ENV{PATH}   =~ m{ \A /home/sand }mx and whimper 'Stopped Konig';
+   eval { require 5.008; }; $@ and whimper 'Perl minimum 5.8';
+   my $reason; $reason = CPANTesting::broken and whimper $reason;
 }
 
-use version; our $VERSION = qv( sprintf '0.7.%d', q$Rev$ =~ /\d+/gmx );
+use version; our $VERSION = qv( '1.0' );
 
 use File::Spec::Functions;
 use Module::Build;
